#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.



#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
#	Don't forget to register new files here!
#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

EXTRA_DIST = \
        arts.m \
	arts_version.m \
	get_artstype.m \
        qtool.m \
        read_artsvar.m \
        read_datafile.m \
        sample.tmplt \
        sstring_get_i.m \
        sstring_length.m \
        tag2mo.m \
	test_Kt.m \
	write_artsvar.m \
	write_datafile.m
