#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.



#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
#	Don't forget to register new files here!
#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

EXTRA_DIST = \
        create_binfile.m \
	hAntennaFromFile.m \
	hAntennaFromFileAdv.m \
	hAntennaGauss.m \
	hAntennaGaussAdv.m \
	hBackendFromFile.m \
	hBackendGauss.m \
	hBinView.m \
	hBinfile.m \
	hEigs.m \
	hHdFromFile.m \
	hHsFromFile.m \
	hInit.m \
	hLoad.m \
	hMixerConst.m \
	hMixerFromFile.m \
	hRedKx.m \
	hRedLimb.m \
	hSave.m \
	hTb.m \
	h_antenna.m \
	h_backend.m \
	h_fix_ys.m \
	h_mixer.m \
	h_weights_integr.m \
	h_x_h.m \
        pbasis.m  \
        pbasis_integrate.m \
        pbasis_x_pol.m
